# vexar-windows

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.css  App.jsx  Settings.jsx  i18n.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
