[package]
name = "vexar"
version = "1.0.0"
description = "Dpi Bypass Tool."
authors = ["ConsolAktif"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vexar_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-process = "2"
tauri-plugin-positioner = "2.3.1"
tauri-plugin-clipboard-manager = "2.3.2"
sysinfo = "0.30"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wininet"] }

# ✅ Release optimizasyonları ekle
[profile.release]
opt-level = "z"      # Size optimize (s yerine z)
lto = true           # Link-time optimization
codegen-units = 1    # Tek thread compile (daha küçük binary)
strip = true         # Debug sembolleri kaldır
panic = "abort"      # Panic'te unwind yok (daha küçük)

